# F1-Dashboard

./: .gitignore  docker-compose.yml  log.py  pyproject.toml  requirements.txt
docker/: Dockerfile
elt/: config.py  exploração_de_dados.ipynb  extract.py  load.py  transform.py
